@@ -19,7 +19,6 @@ import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -66,7 +65,7 @@ public class RafflesQueryServiceImpl implements RafflesQueryService {
 
             List<RafflesResponse.RafflesResponseByGoodsDTO> rafflesResponseByGoodsDTOS = rafflesList.stream()
                     .map(RafflesResponse.RafflesResponseByGoodsDTO::from)
-                    .collect(Collectors.toList());
+                .toList();
 
             return RafflesResponse.RafflesResponseByGoodsListDTO.builder()
                     .rafflesResponseByGoodsList(rafflesResponseByGoodsDTOS)
@@ -74,19 +73,5 @@ public class RafflesQueryServiceImpl implements RafflesQueryService {
         } else {
             throw new ApiException(ErrorStatus._GOODS_NOT_FOUND);
         }
-    }
-
-    public RafflesResponse.RafflesResponseByGoodsDTO applyRaffle(String memberId, Long goodsId, RafflesRequest.RafflesRequestDTO raffleAddDTO) {
-        Goods goods = goodsRepository.findById(goodsId).orElseThrow(() -> new ApiException(ErrorStatus._GOODS_NOT_FOUND));
-        Members members = membersRepository.findById(memberId).orElseThrow(() -> new ApiException(ErrorStatus._UNAUTHORIZED));
-        if (!(members.getRole().equals(Role.MEMBER))) throw new ApiException(ErrorStatus._UNAUTHORIZED);
-
-        // 히스토리 반영 부분
-        // TODO: 포인트 소모 히스토리 서비스 로직 구현 필요
-        // historyService.addPointUsageHistory(memberId, pointsToDeduct, "Raffle Participation");
-        Raffles raffles = RafflesRequest.RafflesRequestDTO.toEntity(members, goods, raffleAddDTO);
-        Raffles savedRaffles = rafflesRepository.save(raffles);
-
-        return RafflesResponse.RafflesResponseByGoodsDTO.from(savedRaffles);
     }
 }
